de decimal a binario

--- a/ejemplo5.html
+++ b/ejemplo5.html
@@ -41,6 +41,9 @@
     var hexNum1 = 0xA; //hexadecimal for 10
 
     // Ejemplo de ocateles valios e invalidos
+    //number type
+
+
     var octalNum1 = 070; //octal for 56
     var octalNum2 = 077; //invalid octal - interpreted as 77
     var octalNum3 = 08; //invalid octal - interpreted as 8
