--- a/ejemplo10.html
+++ b/ejemplo10.html
@@ -1,4 +1,7 @@
 <html>
+
+<head>
+</head>
 <script>
     //funciones
     function sum(num1, num2) {
@@ -15,5 +18,8 @@
     }
     var result = addSomeNumber(100); //300
 </script>
+
+<body>
+</body>
 
 </html>
