--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -1,13 +1,20 @@
 <html>
-    <script>
+
+<head>
+</head>
+<script>
     //Ejecuta un ejemplo de como declarar variables con '_' y '$'
-    
+
     function Example2() {
         var _myVar = 0;
         var $myVar = 'x';
 
-        console.log( _myVar );
-        console.log( $myVar );
+        console.log(_myVar);
+        console.log($myVar);
     }
-    </script>
+</script>
+
+<body>
+</body>
+
 </html>
