--- a/ejemplo3.html
+++ b/ejemplo3.html
@@ -1,20 +1,27 @@
 <html>
-    <script>
-        function Example3() {
 
-"use strict";
+<head>
+</head>
+<script>
+    function Example3() {
 
-debugger;
+        "use strict";
 
-var a = 0;
-var b = 1;
+        debugger;
 
-var sum = a + b //valid even without a semicolon - not recommended
-console.log( sum );
+        var a = 0;
+        var b = 1;
 
-var diff = a - b; //valid - preferred
-console.log( diff );
+        var sum = a + b //valid even without a semicolon - not recommended
+        console.log(sum);
 
-}
-    </script>
+        var diff = a - b; //valid - preferred
+        console.log(diff);
+
+    }
+</script>
+
+<body>
+</body>
+
 </html>
