--- a/ejemplo4.html
+++ b/ejemplo4.html
@@ -1,21 +1,28 @@
 <html>
-    <script>
-        var message = "hi";
+
+<head>
+</head>
+<script>
+    var message = "hi";
     console.log(message);
     console.log(typeof message);
     message = 100; //legal, but not recommended
     console.log(message);
     console.log(typeof message);
     message = { // legal but now is an object
-       "id": 1,
-         "name": "Jovas",
-         "email": "jovany@truiki.com"
-     }
-     console.log(typeof message);
+        "id": 1,
+        "name": "Jovas",
+        "email": "jovany@truiki.com"
+    }
+    console.log(typeof message);
 
-     console.log( message.id );
-     console.log( message.name );
-     console.log( message.email );
+    console.log(message.id);
+    console.log(message.name);
+    console.log(message.email);
     console.log(typeof 1);
-    </script>
+</script>
+
+<body>
+</body>
+
 </html>
