--- a/ejemplo6.html
+++ b/ejemplo6.html
@@ -1,11 +1,18 @@
 <html>
-    <script>
-        //de decimal a vinario 
-        var num = 10;
-        alert(num.toString()); //”10”
-        alert(num.toString(2)); //”1010” // bnarios
-        alert(num.toString(8)); //”12”
-        alert(num.toString(10)); //”10”
-        alert(num.toString(16)); //”a”
-    </script>
+
+<head>
+</head>
+<script>
+    //de decimal a vinario 
+    var num = 10;
+    alert(num.toString()); //”10”
+    alert(num.toString(2)); //”1010” // bnarios
+    alert(num.toString(8)); //”12”
+    alert(num.toString(10)); //”10”
+    alert(num.toString(16)); //”a”
+</script>
+
+<body>
+</body>
+
 </html>
