--- a/ejemplo5.html
+++ b/ejemplo5.html
@@ -1,36 +1,38 @@
 <html>
-    <script>
-       // Data types
+
+<head>
+</head>
+<script>
+    // Data types
     // Undefined, Null, Boolean, Number, and String.}
 
-     var car = null;
-     alert(typeof car); //"object"
+    var car = null;
+    alert(typeof car); //"object"
 
-     car = {
-         "id": 1,
-         "type": 'Lamborghini'
-     }
-
-
-     if(car != null)
-     {
-         alert('Tenemos un carro"');
-     }
+    car = {
+        "id": 1,
+        "type": 'Lamborghini'
+    }
 
 
-     alert( null == undefined );
+    if (car != null) {
+        alert('Tenemos un carro"');
+    }
+
+
+    alert(null == undefined);
 
     // De forma implicita setea el navegador el valor 'undefined'
-     var message; // Valor por default undefined
-     alert(message == undefined); //true
+    var message; // Valor por default undefined
+    alert(message == undefined); //true
 
-     var message = undefined; // Seteamos de forma explicita el valor 'undefined'
-     alert(message == undefined); //true
+    var message = undefined; // Seteamos de forma explicita el valor 'undefined'
+    alert(message == undefined); //true
 
 
     // // Boolean data type
-     var found = true;
-     var lost = false;
+    var found = true;
+    var lost = false;
 
 
     debugger;
@@ -58,7 +60,7 @@
     var floatNum2 = 10.0; //whole number - interpreted as integer 10
 
     var floatNum = 3.125e7; //equal to 31250000
-    var pi = 3.141592e7; 
+    var pi = 3.141592e7;
 
     Number.MIN_VALUE
     Number.MAX_VALUE
@@ -78,5 +80,9 @@
     alert(isNaN("10")); //false - can be converted to number 10
     alert(isNaN("blue")); //true - cannot be converted to a number
     alert(isNaN(true)); //false - can be converted to number 1
-    </script>
+</script>
+
+<body>
+</body>
+
 </html>
