--- a/ejemplo7.html
+++ b/ejemplo7.html
@@ -1,14 +1,21 @@
 <html>
-    <script>
-        //string value
-        //
-         var value1 = 10;
-        var value2 = true;
-        var value3 = null;
-        var value4;
-        alert(String(value1)); //”10”
-        alert(String(value2)); //”true”
-        alert(String(value3)); //”null”
-        alert(String(value4)); //”undefined”
-    </script>
+
+<head>
+</head>
+<script>
+    //string value
+    //
+    var value1 = 10;
+    var value2 = true;
+    var value3 = null;
+    var value4;
+    alert(String(value1)); //”10”
+    alert(String(value2)); //”true”
+    alert(String(value3)); //”null”
+    alert(String(value4)); //”undefined”
+</script>
+
+<body>
+</body>
+
 </html>
