--- a/ejemplo 8.html
+++ b/ejemplo 8.html
@@ -1,9 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-
-</head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <script>
         //unitary operator
         var s1 = "2";
@@ -41,7 +42,10 @@
         var result5 = 5 - "2"; //3 because "2" is converted to 2
         var result6 = 5 - null; //5 because null is converted to 0
     </script>
+</head>
+
 <body>
+
 </body>
 
 </html>
