--- a/ejemplo4.html
+++ b/ejemplo4.html
@@ -1,28 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-</head>
-<script>
-    var message = "hi";
-    console.log(message);
-    console.log(typeof message);
-    message = 100; //legal, but not recommended
-    console.log(message);
-    console.log(typeof message);
-    message = { // legal but now is an object
-        "id": 1,
-        "name": "Jovas",
-        "email": "jovany@truiki.com"
-    }
-    console.log(typeof message);
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        var message = "hi";
+        console.log(message);
+        console.log(typeof message);
+        message = 100; //legal, but not recommended
+        console.log(message);
+        console.log(typeof message);
+        message = { // legal but now is an object
+            "id": 1,
+            "name": "Jovas",
+            "email": "jovany@truiki.com",
+        }
+        console.log(typeof message);
 
-    console.log(message.id);
-    console.log(message.name);
-    console.log(message.email);
-    console.log(typeof 1);
-</script>
+        console.log(message.id);
+        console.log(message.name);
+        console.log(message.email);
+        console.log(typeof 1);
+    </script>
+</head>
 
 <body>
+
 </body>
 
 </html>
