--- a/ejemplo6.html
+++ b/ejemplo6.html
@@ -1,18 +1,23 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        //de decimal a vinario 
+        var num = 10;
+        alert(num.toString()); //”10”
+        alert(num.toString(2)); //”1010” // bnarios
+        alert(num.toString(8)); //”12”
+        alert(num.toString(10)); //”10”
+        alert(num.toString(16)); //”a”
+    </script>
 </head>
-<script>
-    //de decimal a vinario 
-    var num = 10;
-    alert(num.toString()); //”10”
-    alert(num.toString(2)); //”1010” // bnarios
-    alert(num.toString(8)); //”12”
-    alert(num.toString(10)); //”10”
-    alert(num.toString(16)); //”a”
-</script>
 
 <body>
+
 </body>
 
 </html>
