--- a/ejemplo7.html
+++ b/ejemplo7.html
@@ -1,21 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        //string value
+        //
+        var value1 = 10;
+        var value2 = true;
+        var value3 = null;
+        var value4;
+        alert(String(value1)); //”10”
+        alert(String(value2)); //”true”
+        alert(String(value3)); //”null”
+        alert(String(value4)); //”undefined”
+    </script>
 </head>
-<script>
-    //string value
-    //
-    var value1 = 10;
-    var value2 = true;
-    var value3 = null;
-    var value4;
-    alert(String(value1)); //”10”
-    alert(String(value2)); //”true”
-    alert(String(value3)); //”null”
-    alert(String(value4)); //”undefined”
-</script>
 
 <body>
+
 </body>
 
 </html>
