--- a/case_sensitive.html
+++ b/case_sensitive.html
@@ -1,10 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script type="text/javascript" defer="defer" src="example1.js">
+    </script>
 </head>
-<script type="text/javascript" defer="defer" src="example1.js">
-</script>
 
 <body>
 
