--- a/ejemplo10.html
+++ b/ejemplo10.html
@@ -1,25 +1,30 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-</head>
-<script>
-    //funciones
-    function sum(num1, num2) {
-        return num1 + num2;
-        alert("Hello world"); //never executed
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        //funciones
+        function sum(num1, num2) {
+            return num1 + num2;
+            alert("Hello world"); //never executed
+        }
 
-    // no overlanding
-    function addSomeNumber(num) {
-        return num + 100;
-    }
-    function addSomeNumber(num) {
-        return num + 200;
-    }
-    var result = addSomeNumber(100); //300
-</script>
+        // no overlanding
+        function addSomeNumber(num) {
+            return num + 100;
+        }
+        function addSomeNumber(num) {
+            return num + 200;
+        }
+        var result = addSomeNumber(100); //300
+    </script>
+</head>
 
 <body>
+
 </body>
 
 </html>
