--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -1,20 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        //Ejecuta un ejemplo de como declarar variables con '_' y '$'
+
+        function Example2() {
+            var _myVar = 0;
+            var $myVar = 'x';
+
+            console.log(_myVar);
+            console.log($myVar);
+        }
+    </script>
 </head>
-<script>
-    //Ejecuta un ejemplo de como declarar variables con '_' y '$'
-
-    function Example2() {
-        var _myVar = 0;
-        var $myVar = 'x';
-
-        console.log(_myVar);
-        console.log($myVar);
-    }
-</script>
 
 <body>
+
 </body>
 
 </html>
