--- a/ejemplo 8.html
+++ b/ejemplo 8.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>operadores javascript</title>
     <script>
         //unitary operator
         var s1 = "2";
@@ -21,6 +21,11 @@
         b++; //value becomes numeric 1
         f--; //value becomes 0.10000000000000009 (due to floating-point inaccuracies)
         o--; //value becomes numeric -2
+debugger
+        var num1 = 2;
+        var num2 = 20;
+        var num3 = num1-- + num2; //equals 22
+        var num4 = num1 + num2; //equals 21
 
         //boolean operator
         alert(!!"blue"); //true
