--- a/ejamplo13.html
+++ b/ejamplo13.html
@@ -29,7 +29,7 @@ persona.Edad = 29;
 
 /////////
 function displayInfo (args) {
-var salida = “”;
+var salida = '”;
 if (typeof args.name == "cadena") {
 salida + = "Nombre:" + args.name + "\ n";
 }
@@ -47,7 +47,7 @@ nombre: "Greg"
 });
 
 ///////
-alerta (persona [“nombre”]); // "Nicholas"
+alerta (persona ['nombre']); // "Nicholas"
 alert (person.name); // "Nicholas"
 
 //////////
